<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gradient2">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/loginTB"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/gradient2"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageButton
            android:id="@+id/backArrowIBT"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="start"
            android:background="@drawable/stroke1"
            android:contentDescription="@string/description_imageButton_back"
            android:src="@drawable/baseline_arrow_back_24" />

        <ImageView
            android:id="@+id/toolbarLogoIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="32dp"
            android:contentDescription="@string/description_icon_app"
            android:src="@mipmap/ic_launcher" />

        <ImageButton
            android:id="@+id/burgerMenuIB"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:layout_marginEnd="12dp"
            android:background="@drawable/stroke1"
            android:contentDescription="@string/description_imageButton_lupe"
            android:src="@drawable/baseline_menu_24" />

        <ImageButton
            android:id="@+id/lupenSymbolIB"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:layout_marginEnd="12dp"
            android:background="@drawable/stroke1"
            android:contentDescription="@string/description_imageButton_burger"
            android:src="@drawable/baseline_search_24" />

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/toolbarBottomStroke"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/deepPurple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginTB" />

    <androidx.cardview.widget.CardView
        android:id="@+id/welcomeCV"
        android:layout_width="360dp"
        android:layout_height="440dp"
        android:layout_marginBottom="54dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarBottomStroke"
        app:cardCornerRadius="16dp"
        app:cardElevation="12dp"
        app:cardBackgroundColor="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/welcome1TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/welcomeTV"
                android:textColor="@color/teal_200"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/welcome2TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/text_login"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcome1TV" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameTIF"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcome2TV"
                app:startIconDrawable="@drawable/baseline_user_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameTEF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_username" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwortTIF"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/usernameTIF"
                app:startIconDrawable="@drawable/baseline_lock_open_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwortEditTEF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_passwort" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgotPasswortTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/text_forgot_passwort"
                android:textColor="@color/red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.87"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwortTIF" />

        <Button
            android:id="@+id/loginBT"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:background="@drawable/button_background"
            android:text="@string/button_login"
            android:textColor="@color/teal_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwortTIF" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/welcomeCV"
        app:layout_constraintStart_toStartOf="@+id/welcomeCV"
        app:layout_constraintTop_toBottomOf="@+id/welcomeCV">

        <TextView
            android:id="@+id/noAccountTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/gray"
            android:text="@string/text_no_account" />

        <TextView
            android:id="@+id/registerHereTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/red"
            android:text="@string/text_register_here" />

    </LinearLayout>

    <TextView
        android:id="@+id/appVersionTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/text_appversion"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>