<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_main_wetten_fussballCV"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/absinth"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:strokeColor="@color/deepPurple"
    android:padding="4dp"
    app:strokeWidth="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/index_heimTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/text_index_heim"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/index_gastTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/text_index_gast"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/index_heimTV" />

        <TextView
            android:id="@+id/heim_manschaftTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:gravity="start|center_vertical"
            android:text="@string/text_heim_mannschaft"
            android:textColor="@color/teal_200"
            android:textSize="11sp"
            app:layout_constraintStart_toEndOf="@+id/index_heimTV"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/gast_manschaftTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="4dp"
            android:gravity="start|center_vertical"
            android:text="@string/text_gast_mannschaft"
            android:textColor="@color/teal_200"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/index_gastTV"
            app:layout_constraintTop_toBottomOf="@+id/heim_manschaftTV" />

        <TextView
            android:id="@+id/quote_fussball_heimTV"
            android:layout_width="26dp"
            android:layout_height="20dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/stroke2"
            android:textColor="@color/white"
            android:contentDescription="@string/text_quote_heim"
            app:layout_constraintEnd_toStartOf="@+id/quote_fussball_remiTV"
            app:layout_constraintHorizontal_bias="0.91"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/quote_fussball_remiTV"
            android:layout_width="26dp"
            android:layout_height="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/stroke2"
            android:textColor="@color/white"
            android:contentDescription="@string/text_quote_remi"
            app:layout_constraintEnd_toStartOf="@+id/quote_fussball_gastTV"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/quote_fussball_gastTV"
            android:layout_width="26dp"
            android:layout_height="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/stroke2"
            android:textColor="@color/white"
            android:contentDescription="@string/text_quote_gast"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>